<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="pl.jitsolutions.agile.presentation.authorization.login.LoginViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="pl.jitsolutions.agile.presentation.MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/login_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/login_screen_title" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:id="@+id/login_app_name"
                style="@style/AppTheme.AppTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_screens_app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/login_app_description"
                style="@style/AppTheme.AppDescriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_screens_app_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_app_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_layout_email"
                style="@style/AppTheme.EditTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusDown="@+id/login_layout_password"
                app:bindLoginEmailError="@{viewModel.state}"
                app:bindLoginViewEnabled="@{viewModel.state}"
                app:layout_constraintBottom_toTopOf="@id/login_layout_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_app_description"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_email"
                    style="@style/AppTheme.EditTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_mail"
                    android:hint="@string/login_screen_email_label"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.email}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_layout_password"
                style="@style/AppTheme.EditTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_test_shape"
                android:nextFocusUp="@+id/login_layout_email"
                app:bindLoginPasswordError="@{viewModel.state}"
                app:bindLoginViewEnabled="@{viewModel.state}"
                app:layout_constraintBottom_toTopOf="@id/login_login"
                app:layout_constraintTop_toBottomOf="@+id/login_layout_email"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password"
                    style="@style/AppTheme.EditTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_password"
                    android:hint="@string/login_screen_password_label"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_login"
                android:layout_width="0dp"
                android:layout_height="?defaultButtonHeight"
                android:onClick="@{() -> viewModel.login()}"
                android:text="@string/login_screen_login_button_text"
                app:bindLoginViewEnabled="@{viewModel.state}"
                app:layout_constraintBottom_toTopOf="@id/login_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.5" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_register"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="?defaultButtonHeight"
                android:layout_marginBottom="10dp"
                android:onClick="@{() -> viewModel.register()}"
                android:text="@string/login_screen_register_button_text"
                android:textColor="@color/dark_text_color"
                app:bindLoginViewEnabled="@{viewModel.state}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintBottom_toTopOf="@id/login_forgot_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.5" />

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/login_progress"
                style="@android:style/Widget.Material.Light.ProgressBar.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:bindLoginProgressVisibility="@{viewModel.state}"
                app:layout_constraintBottom_toTopOf="@id/login_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_unknown_error" />

            <TextView
                android:id="@+id/login_unknown_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/login_screen_error_unknown"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/login_screen_error_text"
                app:bindLoginUnknownErrorVisibility="@{viewModel.state}"
                app:layout_constraintTop_toBottomOf="@id/login_layout_password"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/login_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:onClick="@{() -> viewModel.resetPassword()}"
                android:text="@string/login_screen_forgot_password_label"
                app:bindLoginViewEnabled="@{viewModel.state}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>