<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="pl.jitsolutions.agile.presentation.projects.managing.ProjectJoiningViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/project_joining_project_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bindProjectJoiningEditingEnabled="@{viewModel.state}"
            app:bindProjectJoiningNameError="@{viewModel.state}">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/project_joining_screen_project_label"
                android:text="@={viewModel.projectName}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/project_joining_password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bindProjectJoiningEditingEnabled="@{viewModel.state}"
            app:bindProjectJoiningPasswordError="@{viewModel.state}"
            app:layout_constraintTop_toBottomOf="@+id/project_joining_project_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/project_joining_screen_password_label"
                android:inputType="textPassword"
                android:text="@={viewModel.password}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/project_join"
            android:layout_width="match_parent"
            android:layout_height="?defaultButtonHeight"
            android:onClick="@{() -> viewModel.joinProject()}"
            android:text="@string/project_joining_screen_join_button_text"
            app:layout_constraintTop_toBottomOf="@+id/project_joining_password_layout" />

        <TextView
            android:id="@+id/project_joining_unknown_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/project_joining_screen_error_unknown"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/project_joining_screen_error_text"
            app:bindProjectJoiningUnknownErrorVisibility="@{viewModel.state}"
            app:layout_constraintTop_toBottomOf="@+id/project_join" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/project_joining_progress"
            style="@android:style/Widget.Material.Light.ProgressBar.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:bindProjectJoiningProgressVisibility="@{viewModel.state}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/project_joining_password_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
