<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="pl.jitsolutions.agile.presentation.authorization.resetPassword.ResetPasswordViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:bindResetPasswordBackArrowVisibility="@{true}"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/reset_password_screen_title" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reset_password_layout_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusUp="@id/reset_password_reset"
                app:bindResetPasswordCredentialsEditingEnabled="@{viewModel.resetPasswordState}"
                app:bindResetPasswordEmailError="@{viewModel.resetPasswordState}">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reset_password_screen_email_label"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.email}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reset_password_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.resetPassword()}"
                android:text="@string/reset_password_screen_reset_button_text"
                app:layout_constraintTop_toBottomOf="@id/reset_password_layout_email" />

            <TextView
                android:id="@+id/reset_password__unknown_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/reset_password_screen_error_unknown"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/reset_password_screen_error_text"
                app:bindResetPasswordUnknownErrorVisibility="@{viewModel.resetPasswordState}"
                app:layout_constraintTop_toBottomOf="@+id/reset_password_reset" />

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/registration_progress"
                style="@android:style/Widget.Material.Light.ProgressBar.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:bindResetPasswordProgressVisibility="@{viewModel.resetPasswordState}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/reset_password__unknown_error" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
